# Panther-update

./: .env.example  .gitignore  PANTHER_BROWSER_AUTOMATION.md  PANTHER_VOICE_AGENT_IMPL.md  Panther Live Automation.md  README.md  VOICE_ASSISTANT_IMPLEMENTATION.md  _patch_html.py  all_model_test_results.json  extract_transcript_format.py  failing_models.json  finance_out.txt  finance_raw.txt  install_log.txt  interactive_panther.py  main.py  model_test_results.json  nvidia_ai_agent_blueprint.md  output.txt  output2.txt  pyproject.toml  smoke_test.py  sse_out.txt  sse_out2.txt  test_all_models.py  test_cdp_typing.py  test_ctypes.py  test_finance.py  test_finance_raw.py  test_focus.py  test_focus2.py  test_focus3.py  test_focus4.py  test_focus_click.py  test_google_key.py  test_key.py  test_loading_page.py  test_models.py  test_ps_focus.py  test_pyautogui_addressbar.py  (+6 more)
.claude/: settings.local.json
panther_extension/: background.js  content.js  manifest.json  popup.html
src/: __init__.py
src/agent/: __init__.py  action_executor.py  action_schema.json  automation_agent.py
src/ai/: __init__.py  ai_router.py  nim_provider.py  ollama_provider.py
src/api/: __init__.py  gemini_live_client.py  gemini_live_speech.py  nvidia_client.py
src/audio/: __init__.py  vad.py
src/browser/: __init__.py  accessibility.py  cdp_controller.py  dom_interactor.py  dom_serializer.py  (+2 more)
tests/: __init__.py  conftest.py  test_action_executor.py  test_agent.py  test_ai_router.py  test_memory.py  test_nvidia_client.py  test_ollama_provider.py  test_security_filter.py
web/: server.py
(+59 files in other folders)
