[tool.poetry]
name = "nvidia-ai-agent"
version = "0.1.0"
description = "Production AI Agent with NVIDIA NIM"
readme = "README.md"
license = "MIT"
authors = ["AI Agent Development Team"]

[tool.poetry.dependencies]
python = "^3.11"
PyQt6 = "^6.6.0"
httpx = "^0.25.0"
faster-whisper = "^0.10.0"
piper-tts = "^1.2.0"
playwright = "^1.40.0"
chromadb = "^0.4.18"
sqlalchemy = "^2.0.23"
watchdog = "^3.0.0"
loguru = "^0.7.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
keyring = "^24.3.0"
python-dotenv = "^1.0.0"
sounddevice = "^0.4.6"
numpy = "^1.26.0"
sentence-transformers = "^2.2.2"
aiofiles = "^23.2.0"
google-genai = "^1.0.0"
mss = "^9.0.0"
Pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-qt = "^4.2.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
